--- a/class11.css
+++ b/class11.css
@@ -101,3 +101,32 @@ footer {
 body {
   background-color: rgb(238, 195, 6);
 }
+.contact {
+  text-align: center;
+}
+.msg1 {
+  margin-left: 125px;
+}
+#button2 {
+  background-color: black;
+  color: aliceblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 20%;
+}
+#button2:hover {
+  background-color: aliceblue;
+  color: black;
+  cursor: pointer;
+}
+.contact {
+  background-color: rgb(250, 250, 170);
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+h3 {
+  margin-top: 20px;
+}
